[package]
name = "fire-case"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "web-scraper"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.11", features = ["rustls-tls-manual-roots"], default-features = false }
scraper = "0.19"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 编码转换：GBK/GB2312 -> UTF-8（reqwest 已间接依赖，直接引入即可）
encoding_rs = "0.8"